tweeks for NSERC relavance

--- a/resume.tex
+++ b/resume.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
 
-\header{Sacha}{Goldman}{}% Subtitle: (Software Engineer, Machine Learning Engineer, Computer Science and Mathematics Student)
+\header{Sacha}{Goldman}{Computer Science and Mathematics Student}% Subtitle: (Software Engineer, Machine Learning Engineer, Computer Science and Mathematics Student)
 
 %----------------------------------------------------------------------------------------
 %	SIDEBAR SECTION
@@ -11,15 +11,11 @@
 \begin{aside} % In the aside, each new line forces a line break
 \section{Location}
 Toronto, Canada
-~ \vspace{-2mm}
-US + Canadian Citizen 
-Willing to Relocate
 \section{Languages}
 {\color{red} $\varheartsuit$} Python, Swift, 
 C, TypeScript
 \section{Tools}
-\LaTeX, Git, Shell, 
-SwiftUI, PyTorch
+PyTorch, \LaTeX, Git, Shell
 \section{Online}
 \textbf{Email}
 \url{mailto:sachagoldman@icloud.com}{sachagoldman@icloud.com} 
@@ -29,9 +25,6 @@ SwiftUI, PyTorch
 ~ \vspace{-2mm}
 \textbf{Github}
 \url{https://github.com/SachaGoldman}{SachaGoldman}
-~ \vspace{-2mm}
-\textbf{LinkedIn}
-\url{https://www.linkedin.com/in/sacha-goldman-5b95391a0/}{Sacha Goldman}
 \section{Awards}
 New College Council 
 In-Course Scholarship
@@ -58,7 +51,7 @@ VSB District Scholarship
 {\emph{3.85/4.0 GPA \ Graduating May 2023}
 ~ \vspace{1mm}
 
-Primarily interested in the applying both mathematics and computer science to machine learning. Core topics include: algorithms, data-structures, linear algebra, group theory, single and multivariable analysis, probability and statistics, and programming.}
+Focused on computer science theory and mathematics, especially machine learning and its mathematical underpinnings.  Core topics include: machine learning, algorithms, data-structures, linear algebra, group theory, single and multivariable analysis, probability and statistics, and programming.}
 
 %------------------------------------------------
 
