--- a/resume.tex
+++ b/resume.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
 
-\header{Sacha}{Goldman}{}% Subtitle: (Software Engineer, Machine Learning Engineer, Computer Science and Mathematics Student)
+\header{Sacha}{Goldman}{Computer Science and Mathematics Student}% Subtitle: (Software Engineer, Machine Learning Engineer, Computer Science and Mathematics Student)
 
 %----------------------------------------------------------------------------------------
 %	SIDEBAR SECTION
